# cs545-face-detection-project

./: Image_Enhancement.ipynb  README.md  main.py  pyproject.toml
Facial_Recognition_Model/: README.md  environment.yml
Facial_Recognition_Model/model_training/: arcface_model.py  confusion_mat.sh  confusion_matrix.py  dataloaders.py  start_train.sh  train.py  util.py
Image_Preprocessing/: Image_Enhancement.ipynb  README.md  main.py
