[project]
name = "cs545-face-detection-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "numpy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.66",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"
explicit = true
